# dioxus-motion

./: .gitignore  .stylelintignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION_GUIDE.md  PERFORMANCE.md  README.md  REFACTOR.md  ROADMAP.md  TODO.md  blog.md  cleanup_report.md  justfile  notes.md  release-plz.toml  task_plan.md
benches/: README.md  animation_perf.rs
crates/route_transitions/: Cargo.toml
crates/route_transitions/src/: lib.rs
docs/: .gitignore  404.html  Cargo.toml  Dioxus.toml  README.md  index.html  input.css  justfile  motion_primitives_guide.md  package-lock.json  package.json  tailwind.config.js  tailwind.css
docs/assets/: chunk_0_split-4444c244fddf6df.wasm  docs-0da7fd86f0c8130f.js  docs-36b4438d8c5d6f2c.js  docs-36b4438d8c5d6f2c.js.br  docs-9574af562ad65666.js  docs-9fd4f017d70849eb.js  docs-ccf476ec2793ebcd.js  docs-ccf476ec2793ebcd.js.br  docs-dxh1fe2efec30cf18a2.js  docs-dxh2a66942243faa386.js  docs-dxh2bf4eb1c6ac3a936.js  docs-dxh3e29d0dd3ef5fd7.js  docs-dxha35587e55f1d4e9.js  docs-dxha4813a284648c24e.js  docs-dxhe49649e157d35d7.js  docs-dxhe62bceaef977b9.js  docs_bg-68eb3f72b754f470.wasm  docs_bg-cd32b17d71de3c25.wasm  docs_bg-cd32b17d71de3c25.wasm.br  docs_bg-dxh1f1008c58f7758a.wasm  docs_bg-dxh48cd4717ff28f23.wasm  docs_bg-dxh57ab992d7c884e1.wasm  docs_bg-dxh59aa8cf73b7d161.wasm  docs_bg-dxh5a112c9f95c9466.wasm  docs_bg-dxhb1cb8df5589af7b8.wasm  docs_bg-dxhd7d0c2c91e44ac85.wasm  docs_bg-dxhec9daba5c28e90e9.wasm  docs_bg-fdd43e1e465931eb.wasm  docs_bg-fdd43e1e465931eb.wasm.br  example_projects-985461e85a97f9dc.js  example_projects-985461e85a97f9dc.js.br  example_projects-e0636da46d90f4f4.js  example_projects-e0636da46d90f4f4.js.br  example_projects_bg-1962de42ad732cb4.wasm  example_projects_bg-1962de42ad732cb4.wasm.br  example_projects_bg-7d8ded186f451f33.wasm  example_projects_bg-7d8ded186f451f33.wasm.br  main-20cf4e1dfdbdc2e4.css  main-20cf4e1dfdbdc2e4.css.br  main-2f38124ba9042a51.css  (+13 more)
docs/blog/: index.html
docs/docs/: index.html
docs/docs/basic_guide/: index.html
docs/docs/complex_guide/: index.html
docs/docs/intermediate_guide/: index.html
docs/docs/transitions/: index.html
docs/old_showcase/: index.html
docs/src/: lib.rs  main.rs
docs/src/components/: animated_flower.rs  animations.rs  code_block.rs  cube_animation.rs  extras.rs  footer.rs  guide_navigation.rs  mod.rs  navbar.rs  page_not_found.rs  page_transition.rs  transformation_example.rs
docs/src/examples/: keyframe_animation.rs
docs/src/hooks/: scroll.rs
docs/src/old_showcase/: mod.rs  showcase_component.rs
docs/src/old_showcase/components/: animated_counter.rs  animated_flower.rs  animated_menu_item.rs  bouncing_text.rs  candle_animation.rs  card_3d_flip.rs  color_animation.rs  cube_animation.rs  interactive_cube.rs  mod.rs  morphing_shape.rs  navbar.rs  path_animation.rs  progress_bar.rs  pulse_effect.rs  rotating_button.rs  transform_animation.rs  typewriter_effect.rs  value_animation.rs
docs/src/pages/: basic_guide.rs  complex_guide.rs  custom_guide.rs  intermediate_guide.rs  mod.rs  motion_style_guide.rs  presence_guide.rs
docs/src/pages/blog/: index.rs
docs/src/pages/docs/: index.rs  mod.rs  motion_primitives.rs
docs/src/pages/home/: index.rs
docs/src/utils/: router.rs
docs/tests/: presence_layout_height.mjs
docs/wasm/: docs.js  docs_bg.wasm  example_projects.d.ts  example_projects.d.ts.br  example_projects.js  example_projects.js.br  example_projects_bg.wasm  example_projects_bg.wasm.br  example_projects_bg.wasm.d.ts  example_projects_bg.wasm.d.ts.br
docs/wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
docs/wasm/snippets/dioxus-interpreter-js-ac69b31eb2a509ab/: inline0.js
example_project/: Cargo.toml  README.md  justfile  tailwind.config.js
example_project/assets/: main.css
example_project/src/: main.rs  tailwind.rs
example_project/src/components/: mod.rs
example_project/src/components/dashboard/: activity_chart.rs  mod.rs  recent_activity.rs  stats_card.rs  tasks.rs
example_project/src/components/layout/: header.rs  mod.rs  sidebar.rs
example_project/src/components/pages/: analytics.rs  mod.rs  reports.rs  settings.rs
example_projects/: Cargo.toml  Dioxus.toml  index.html  input.css
example_projects/assets/: main.css
example_projects/src/: lib.rs  main.rs
example_projects/src/components/: animated_counter.rs  animated_flower.rs  bouncing_text.rs  card_3d_flip.rs  color_animation.rs  cube_animation.rs  enhanced_showcase.rs  interactive_cube.rs  mod.rs  morphing_shape.rs  motion_div.rs  navbar.rs  particle_system.rs  path_animation.rs  progress_bar.rs  pulse_effect.rs  spring_component.rs  timer_component.rs  transform_animation.rs  typewriter_effect.rs  value_animation.rs
examples/: generic_store.rs  motion_combined.rs  motion_components.rs  multithreaded_animations.rs  store_basic.rs  store_keyframes.rs  store_migration.rs  store_sequence.rs
expense_tracker/: Cargo.toml  PROMPT.md  tailwind-watch.sh
expense_tracker/assets/: echarts-5.5.1.min.js  main.css
expense_tracker/src/: main.rs
expense_tracker/src/assets/: styles.css
expense_tracker/src/components/: expense_chart.rs  expense_form.rs  expense_item.rs  expense_list.rs  filter_bar.rs  mod.rs  summary_view.rs
expense_tracker/src/components/charts/: mod.rs
expense_tracker/src/components/primitives/: button.rs  card.rs  mod.rs
expense_tracker/src/context/: expense_context.rs  mod.rs
expense_tracker/src/models/: expense.rs  mod.rs
expense_tracker/src/pages/: budget.rs  dashboard.rs  expense_form.rs  mod.rs  not_found.rs
expense_tracker/src/repositories/: expense_repository.rs  mod.rs
expense_tracker/src/services/: database.rs  expense_service.rs  mod.rs
expense_tracker/src/state/: context.rs  expense_state.rs  mod.rs
expense_tracker/src/utils/: currency_formatter.rs  date_utils.rs  mod.rs
specs/: animate-presence-spec.md
src/: animation.rs  animations.rs  colors.rs  enhanced_motion.rs  keyframes.rs  lib.rs  manager.rs  motion.rs  multithreaded_motion.rs  platform.rs  pool.rs  presence.rs  (+9 more)
(+42 files in other folders)
