[package]
name = "example_projects"
version = "0.1.0"
authors = ["Sabin Regmi <get2sabin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.1" }
dioxus-motion = { path = "../", optional = true, default-features = false }
easer = "0.3.0"

[features]
default = ["web"]
web = ["dioxus/web", "dioxus-motion/web"]
desktop = ["dioxus/desktop", "dioxus-motion/desktop"]
mobile = ["dioxus/mobile", "dioxus-motion/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
[profile.wasm-dev.package."*"]
opt-level = 3

[profile.server-dev]
inherits = "dev"
[profile.server-dev.package."*"]
opt-level = 3

[profile.android-dev]
inherits = "dev"
