[package]
name = "route_transitions"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.98", features = [
    "derive",
    "parsing",
    "proc-macro",
], default-features = false }
quote = { version = "1.0.38", default-features = false }
proc-macro2 = { version = "1.0.93", default-features = false }
